--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <header>
-        <a href="Index.html">Home Page</a>
+        <a href="index.html">Home Page</a>
         <a href="Physical.html">Physical Benefits</a>
         <a href="Mental.html">Mental Benefits</a>
         <a href="ReferencePage.html">Reference Page</a>
@@ -38,3 +38,4 @@
     </footer>
 </body>
 </html>
+
