--- a/ReferencePage.html
+++ b/ReferencePage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="Index.html">Home Page</a>
+        <a href="index.html">Home Page</a>
         <a href="Physical.html">Physical Benefits</a>
         <a href="Mental.html">Mental Benefits</a>
         <a href="ReferencePage.html">Reference Page</a>
@@ -32,3 +32,4 @@
     </section>
 </body>
 </html>
+
